Ich bin Stella und ich habs nicht drauf

--- a/content/chapter1.tex
+++ b/content/chapter1.tex
@@ -5,7 +5,7 @@
 
 \section{Short Overview of the Standard Model of Particle Physics}
 Particle physics deals with elementary particles without any substructure and bound states of the elemantary particles forming other particles.
-Moreover the interactions between the particles  are considered.
+Moreover, the interactions between the particles  are studied.
 Table \ref{standardmodel} shows the different elementary particles the Standard Model consists of.
 
 \begin{table}
@@ -13,7 +13,7 @@ Table \ref{standardmodel} shows the different elementary particles the Standard 
 %\setlength{\tabcolsep}{3cm}
 \begin{tabular}{|c|c c c|c|} 
 \hline
- & 1st Generation & 2nd Generation & 3rd Generation &  Bosons \\
+ & $1^{st}$ generation & $^{2nd}$ generation & $3^{rd}$ generation &  Bosons \\
 \hline
 \hline
 &	&	&	& \small{Vector-bosons}	\\
@@ -33,27 +33,27 @@ Leptons & $\begin{matrix} \nu_{e} \\ \\ e \end{matrix}$ & $\begin{matrix} \nu_{\
 
 
 Both leptons and quarks are fermions with spin $s= \frac{1}{2}$. 
-There are twelve fermions, with one anti-particle for each fermion, which are segmented in three generations.     
-For the leptons there is a lepton with charge $q = -1$ (electron e, muon $\mu$, tau $\tau$) and a corresponding neutrino without electric charge(electron-neutrino $\nu_{e}$, muon-neutrino $\nu_{\mu}$, tau-neutrino $\nu_{\tau}$) in each genaration.
+There are twelve fermions, with one anti-particle for each fermion, which are divided in three generations.     
+For the leptons there is a lepton with charge $q = -1$ (electron e, muon $\mu$, tau $\tau$) and a corresponding neutrino without electric charge (electron-neutrino $\nu_{e}$, muon-neutrino $\nu_{\mu}$, tau-neutrino $\nu_{\tau}$) in each genaration.
 The mass of charged leptons increases with the generation in which it is located and the neutrinos are supposed to be massless.\\
-Quark are elementary particles which can not be observed in unbound states.
+Quarks are elementary particles which cannot be observed in unbound states.
 The quarks can be divided in up-type and down-types with charge $q = +\frac{2}{3}$ for the up- and $q = -\frac{1}{3}$ for the down-types.
-Upquark u, charmequark c and topquark t are up-types while downquark d, strangequark s and bottomquark b are down-type quarks. 
-The mass of the quarks increases with the generation like it was mentioned for the leptons and the down-types are heavier than the up-types exept for the first generation.
-The topquark is of peculiar interest because it is the heaviest patricles of the Standard Model and unlike every other quark don't occur in bound states.
-Furthermore the standard model includes particles with spin 1 which are the gauge bosons.
+Up-quark u, charm-quark c and top-quark t are up-types while down-quark d, strange-quark s and bottom-quark b are down-type quarks. 
+The mass of the quarks increases with the generation as it was mentioned for the leptons.
+The top-quark is of peculiar interest because it is the heaviest particle of the Standard Model and unlike every other quark does not occur in bound states.
+Furthermore the Standard Model includes particles with spin 1 which are the gauge bosons.
 They include the photon $\gamma$,the gluons g, the W bosons $W^{\pm}$ and the Z boson $Z^{0}$.
 The gauge bosons are the mediators of the fundamental forces. 
-The photon $\gamma$ mediates the elektromagnetic, the gluons the strong  and the $W^{\pm}$ and $Z^{0}$ the weak force.  
+The photon $\gamma$ mediates the electromagnetic, the gluons the strong  and the $W^{\pm}$ and $Z^{0}$ the weak force.  
 Fermions and particles, which are bound states of the fermions, interact via the fundamental forces.
 There are different characteristics particles have to fulfill to participate in the different interactions.
 Particles with electric charge can interact via the electromagnetic force.
-The strong interaction occurs between particles with colour charge, which are quarks, bound states of quarks and gluons itself.
+The strong interaction occurs between particles with colour charge, which are quarks and gluons themselves.
 The weak force is mediated between particles with weak charge having a left-handed chirality.\\
-The $\gamma$ and the gluons are massless, while the $W^{\pm}$ and $Z^{0}$ carry mass. 
+The $\gamma$ and the gluons are massless, while the $W^{\pm}$ and $Z^{0}$ have a mass. 
 W bosons are the only gauge bosons which have electric charge with +1 for the $W^{+}$ and -1 for the $W^{-}$.\\
 Finally there is a scalar boson with spin 0, the higgs boson H.
-The higgs carries mass but no electric charge.
+The higgs boson carries mass but no electric charge.
 It was predicted  by the higgs mechanism.
 The mechanism explains the existence of mass for the elementary particles of the Standard Model.
 
@@ -61,17 +61,23 @@ The mechanism explains the existence of mass for the elementary particles of the
 
 
 \section{Beyond Standard Model Physics: Vector-like Quarks}
-Vector-like quarks \cite{handbook} are predicted as fermions with spin $\frac{1}{2}$.
-There are four types of vector-like quarks which are assumed to couple only to the third generation standard model quarks.
-Caused by the coupling between the vector-like quarks and the third generation quarks the coupling of the Standard model quarks to the vector bosons would change.\\
-The different vector-like quarks appear in seven multiplets of which two are singulets, three doublets and two triplets.
-Table \ref{vectorlikequarks} lists the different types of vector-like quarks with their specific charge and the possible multiplets they can be assigned too.
+Vector-like quarks \cite{handbook} are part of  theories beyond the Standard Model. 
+They are for example a necessary part of theories predicting the higgs as pseudo-Goldstone boson to explain why the mass of the higgs is as light as observed \cite{Th1,Th2,Th3}. 
+Furthermore, they are part of the partial-compositeness theory of flavour in which they have an appearance as fermion resonances \cite{Th4,Th5}.
+These ideas are used for example in little Higgs and composite Higgs models.\\
+In addition to that, if the vector-like quarks will exist, they would offer the possibility to allow tree-level flavour-changing neutral currents and to break the GIM mechanism \cite{GIM}.
+Moreover, new origins of CP violation would arise from the existence of vector-like quarks \cite{CP1,CP2}.\\
+In the theories mentioned before, vector-like quarks  are predicted as fermions with spin $s = \frac{1}{2}$.
+There are four types of vector-like quarks which are assumed to couple predominantly to the third generation Standard Model quarks.
+Caused by the coupling between the vector-like quarks and the third generation quarks, the coupling of the Standard Model quarks to the vector bosons would change.\\
+The different vector-like quarks may appear in seven multiplets of which two are singulets, three doublets and two triplets.
+Table \ref{vectorlikequarks} lists the different vector-like quark flavors with their specific charge and the possible multiplets they can be assigned too.
 
 \begin{table}
 \centering
 \begin{tabular}{|c|c||c|} 
 \hline
-Flavor& Charge & Arragnement in multiplets\\
+Flavor& Charge & Arrangement in multiplets\\
 \hline
   & 	           & \multirow{3}{*}{$T^{0}_{L,R}$ , $B^{0}_{L,R}$ (singlets)}\\
 T & $+\sfrac{2}{3}$ & \multirow{4}{*}{(X $T^{0})_{L,R}$,  ($T^{0} B^{0})_{L,R}$, ($B^{0} Y)_{L,R}$ (doublets)} \\
@@ -81,32 +87,27 @@ X & $-\sfrac{4}{3}$ & \\
   &                &\\
 \hline
 \end{tabular}
-\caption{Containing the different types of vector-like quarks with their specific charge and the possible arragnement in multiplets. 
-The zero superscript is used to denote the weak eigenstates and seperate them from the mass eigenstates.
+\caption{This table contains the different types of vector-like quarks with their specific charge and the possible arrangement in multiplets. 
+The zero superscript is used to denote the weak eigenstates and separate them from the mass eigenstates.
 For the multiplets containing X and Y the mass and weak eigenstates are the same. }
 \label{vectorlikequarks}
 \end{table}
 
-In this analysis only the singulets are considered.\\
-Possible decay channels for the vector-like quarks include a combination of the vector bosons or the higgs and a third generation quarks in order that conversation of charge is preexisting.\\
-Unlike the Standard Model quarks coupling with a (V-A) (vector minus axialvector) structure regarding the weak interaction, the vector-like quark have purely vector couplings.
-Therfore also vector-like quarks with right-handed chirality couple to the weak force.
-Because of this tranformation behavior explicit mass term in the lagrangian are not forbidden because they do not break the gauge invariance.
-Hence the vector-like quarks don't receive their masses from the higgs mechanism contrary to the Standard Model quarks.\\
-If the vector-like quarks would be added to the Standard Model they would offer the possibility to allow tree-level flavour-changing neutral currents and to break the GIM mechanism \cite{GIM}.
-Moreover vector-like quarks would provide new origins of CP violation \cite{CP1}, \cite{CP2}.
-Vector-like quarks are part of  theories beyond the Standard Model. 
-They are for example a necessary part of theories predicting the higgs as pseudo-Goldstone boson to explain why the mass of the higgs is as light as observed \cite{Th1-Th3}. 
-Furthermore they are part of the partial-compositeness theory of flavour in which they have an apperence as fermion resonances \cite{Th4,Th5}.
-This ideas are used for example in little higgs and composite higgs models .\\
-Vector-like quarks can be both pair and single produced.
-In this analysis the pair production process approached which is performed with gluon fusion.
-The feynman diagramms for both the production process and the specific decay topology considered in this analysis are presented in figure \ref{feynmantts} for the vector-like top and \ref{feynmanbbs} for the vector-like bottom quark. .
+Unlike the Standard Model quarks coupling with a (V-A), which means a vector minus axialvector coupling structure regarding the weak interaction, the vector-like quarks have pure vector couplings.
+Therfore, also vector-like quarks with right-handed chirality couple to the weak force.
+Since the lagrangian describing the properties of the vector-like quarks is invariant under SU(2) transformations, explicit mass terms in the lagrangian are not forbidden because they do not break the local gauge invariance.
+Hence, the vector-like quarks do not receive their masses from the higgs mechanism in contrast to the Standard Model quarks.\\
+Because of the almost equal kinematic for the vector-like top and bottom quarks arranged in singulets, doublets and triplets the multiplets can be used similary for optimization studies.
+Therfore mostly only singulets are considered.\\
+Possible decay channels for the vector-like quarks include a combination of the vector bosons $W^{\pm}$, $Z^{0}$ or the higgs and a third generation quarks so that conservation of charge is guaranteed.\\
 
+Vector-like quarks can be both pair and singly produced.
+The main process for the pair production is the gluon fusion via the strong interaction.
+The Feynman diagrams for the pair production process with the specific vector-like quark decay topology TT \texorpdfstring{$\longrightarrow$}~ZtWb and BB \texorpdfstring{$\longrightarrow$}~ZbWt are presented in figure \ref{feynmantts} for the vector-like top and \ref{feynmanbbs} for the vector-like bottom quark.
 \begin{figure}[h!]
 \centering
 \includegraphics[width=11cm]{figures/tts.pdf}
-\caption{Feynman diagramm for the vector-like top production process and decay channel.}
+\caption{Feynman diagram for the vector-like top pair production process and the TT \texorpdfstring{$\longrightarrow$}~ZtWb decay channel.}
 \label{feynmantts}
 \end{figure}
 
@@ -115,15 +116,22 @@ The feynman diagramms for both the production process and the specific decay top
 \begin{figure}[h!]
 \centering
 \includegraphics[width=11cm]{figures/bbs.pdf}
-\caption{Feynman diagramm for the vector-like bottom production process and decay channel.}
+\caption{Feynman diagram for the vector-like bottom pair production process and the BB \texorpdfstring{$\longrightarrow$}~ZbWt decay channel.}
 \label{feynmanbbs}
 \end{figure}
 
-The analysis is in the dilepton channel therefore all particles except the Z boson decay hadronically and form jets. 
-The considered decay topology contains tree-level flavour-changing neutral currents.\\
-Previous analysis in the di- and trilepton channel with $\sqrt{s}$ = \SI{8}{TeV} for both pair and single production processes set mass limits for the vector-like top and bottom quark\cite{8tevanalysis}. 
-The limits for the singulets are $m_{T} >$ \SI{655}{GeV} for the vector-like top and $m_{B} >$ \SI{685}{GeV} for the vector-like bottom quark.  
-This limits are at the $95 \%$ confidence level \cite{confidencelevel}.
+In the following, the dilepton channel is considered, therefore all particles except the Z boson decay hadronically. 
+The presented decay topology contains tree-level flavour-changing neutral currents.\\
+Results from previous searches for pair production of vector-like T and B  in the di- and trilepton channel set mass limits for the vector-like top and bottom quark masses. 
+The limits for the singlets are $m_{T} >$ \SI{780}{GeV} for the vector-like top and $m_{B} >$ \SI{830}{GeV} for the vector-like bottom quark \cite{masslimit}.  
+This limits are determined with a confidence level of $95 \%$.
+
+
+
+
+
+
+
  
 
 
