--- a/references.bib
+++ b/references.bib
@@ -47,9 +47,8 @@ school = {TU Dortmund}
       title          = "{Handbook of vectorlike quarks: Mixing and single
                         production}",
       journal        = "Phys. Rev.",
-      volume         = "D88",
+      volume         = "D 88",
       year           = "2013",
-      number         = "9",
       pages          = "094010",
       doi            = "10.1103/PhysRevD.88.094010",
       eprint         = "1306.0572",
@@ -59,13 +58,31 @@ school = {TU Dortmund}
 }
 
 @article{topmass,
-      author         = "CMS Collaboration",
-      title          = "{Combination of ATLAS and CMS results on the mass of the
-                        top quark using up to 4.9 inverse femtobarns of data}",
-      collaboration  = "CMS",
-      year           = "2013",
-      reportNumber   = "CMS-PAS-TOP-13-005",
-      SLACcitation   = "%%CITATION = CMS-PAS-TOP-13-005;%%"
+      title          = "{First combination of Tevatron and LHC measurements of
+                        the top-quark mass}",
+      collaboration  = "ATLAS, CDF, CMS, D0",
+      year           = "2014",
+      eprint         = "1403.4427",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "ATLAS-CONF-2014-008, CDF-NOTE-11071, CMS-PAS-TOP-13-014,
+                        D0-NOTE-6416, FERMILAB-TM-2582-E",
+      SLACcitation   = "%%CITATION = ARXIV:1403.4427;%%"
+}
+
+
+
+
+@techreport{masslimit,
+      title         = "{Search for new physics using events with $b$-jets and a
+                       pair of same charge leptons in 3.2 fb$^{-1}$ of $pp$
+                       collisions at $\sqrt{s}=13$ TeV with the ATLAS detector}",
+      institution   = "CERN",
+      collaboration = "ATLAS Collaboration",
+      address       = "Geneva",
+      number        = "ATLAS-CONF-2016-032",
+	  year          = "2016",
+      reportNumber  = "ATLAS-CONF-2016-032",
 }
 
 @article{BRANCO1986738,
@@ -124,7 +141,7 @@ author = "G.C. Branco and L. Lavoura",
       title          = "{Top quarks and electroweak symmetry breaking in little
                         Higgs models}",
       journal        = "Phys. Rev.",
-      volume         = "D69",
+      volume         = "D 69",
       year           = "2004",
       pages          = "075002",
       doi            = "10.1103/PhysRevD.69.075002",
@@ -139,7 +156,7 @@ author = "G.C. Branco and L. Lavoura",
       author         = "Contino, Roberto and Da Rold, Leandro and Pomarol, Alex",
       title          = "{Light custodians in natural composite Higgs models}",
       journal        = "Phys. Rev.",
-      volume         = "D75",
+      volume         = "D 75",
       year           = "2007",
       pages          = "055014",
       doi            = "10.1103/PhysRevD.75.055014",
@@ -185,7 +202,6 @@ author = "G.C. Branco and L. Lavoura",
 title = "Flavor at ssc energies: A new mechanism for dynamically generated fermion masses",
 journal = "Nuclear Physics B",
 volume = "365",
-number = "2",
 pages = "259",
 year = "1991",
 note = "",
@@ -214,19 +230,6 @@ author = "David B. Kaplan",
       SLACcitation   = "%%CITATION = ARXIV:1409.5500;%%"
 }
 
-@article{confidencelevel,
-      author         = "Read, Alexander L.",
-      title          = "{Presentation of search results: The CL(s) technique}",
-      booktitle      = "{Advanced Statistical Techniques in Particle Physics.
-                        Proceedings, Conference, Durham, UK, March 18-22, 2002}",
-      journal        = "J. Phys.",
-      volume         = "G28",
-      year           = "2002",
-      pages          = "2693-2704",
-      doi            = "10.1088/0954-3899/28/10/313",
-      note           = "[,11(2002)]",
-      SLACcitation   = "%%CITATION = JPAGA,G28,2693;%%"
-}
 
 @article{LHC,
       author         = "Evans, Lyndon and Bryant, Philip",
@@ -239,9 +242,20 @@ author = "David B. Kaplan",
       SLACcitation   = "%%CITATION = JINST,3,S08001;%%"
 }
 
+@article{ATLAS,
+  author={The ATLAS Collaboration},
+  title={The ATLAS Experiment at the CERN Large Hadron Collider},
+  journal={Journal of Instrumentation},
+  volume={3},
+  number={08},
+  pages={S08003},
+  year={2008},
+  abstract={The ATLAS detector as installed in its experimental cavern at point 1 at CERN is described in this paper. A brief overview of the expected performance of the detector when the Large Hadron Collider begins operation is also presented.}
+}
+
 @article{antikt,
       author         = "Cacciari, Matteo and Salam, Gavin P. and Soyez, Gregory",
-      title          = "{The Anti-k(t) jet clustering algorithm}",
+      title          = "{The anti-$k_t$ jet clustering algorithm}",
       journal        = "JHEP",
       volume         = "04",
       year           = "2008",
